adding backend testing

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,14 @@ coverage/
 # Build outputs
 dist/
 build/
+
+#virtual environment
+venv/
+
+#backend
+backend/venv/
+backend/node_modules/
+backend/dist/
+backend/build/
+backend/coverage/
+backend/logs/
